/validate/pdf returns signature value digest
